<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:layout_weight="1"
            app:srcCompat="@drawable/vector4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/play_Video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:background="@drawable/btn_border"
                android:text="Empezar Video"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="50px"/>

            <Button
                android:id="@+id/botonMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:background="@drawable/btn_border"
                android:text="Ver Mapa"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="50px"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="256dp">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>