...
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Matinilla"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnQNavajas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Quebrada Navajas"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnAlvarez"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Calle Los Álvarez"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnCPRioUruca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Calle Paralela Río Uruca"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnSPitier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Salida Quebrada Pitier"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnQTapezco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Calle Los Delgado"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnLaFuente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border"
                    android:onClick="actVideos"
                    android:text="Puente Sector la Fuente"
                    android:textSize="50px"/>

                <Button
                    android:id="@+id/btnSanguijuela"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
