...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.osmdroid.views.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" android:focusable="true" />

    </RelativeLayout>

...
